--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     $("#myPhoto").hide();
     $("#target").click(function(){
     $("#myPhoto").toggle();
+    $("#target").addClass("animated shake");
     });
   });
 </script>
