--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <script>
   $(document).ready(function() {
     $(".text").css("color", "red");
+    $(".text").addClass("animated shake");
     $("#myPhoto").hide();
     $("#target").click(function(){
     $("#myPhoto").toggle();
-    $("#target").addClass("animated shake");
     });
   });
 </script>
