--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     $("#myPhoto").hide();
     $("#target").click(function(){
     $("#myPhoto").toggle();
+    $("#target").css("color", "red");
     });
   });
 </script>
