--- a/index.html
+++ b/index.html
@@ -45,26 +45,5 @@
     <li class="text"><a href="http://www.gtes.tp.edu.tw/">古亭國小</li>
     <li class="text"><a href="https://www.chwjh.tp.edu.tw">金華國中</li>
     <li class="text"><a href="https://www.yphs.ntpc.edu.tw/">永平高中</li>
-    <li class="text"><a href="https://www.fju.edu.tw/">輔仁大學</li>
-  <div class="container-fluid">
-  <h3 class="text-primary text-center">jQuery Playground</h3>
-  <div class="row">
-    <div class="col-xs-6">
-      <h4>#left-well</h4>
-      <div class="well" id="left-well">
-        <button class="btn btn-default target" id="target1">#target1</button>
-        <button class="btn btn-default target" id="target2">#target2</button>
-        <button class="btn btn-default target" id="target3">#target3</button>
-      </div>
-    </div>
-    <div class="col-xs-6">
-      <h4>#right-well</h4>
-      <div class="well" id="right-well">
-        <button class="btn btn-default target" id="target4">#target4</button>
-        <button class="btn btn-default target" id="target5">#target5</button>
-        <button class="btn btn-default target" id="target6">#target6</button>
-      </div>
-    </div>
-  </div>
-</div>
+    <li class="text"><a href="https://www.fju.edu.tw/">000</li>
   </html>
