--- a/index.html
+++ b/index.html
@@ -45,5 +45,5 @@
     <li class="text"><a href="http://www.gtes.tp.edu.tw/">古亭國小</li>
     <li class="text"><a href="https://www.chwjh.tp.edu.tw">金華國中</li>
     <li class="text"><a href="https://www.yphs.ntpc.edu.tw/">永平高中</li>
-    <li class="text"><a href="https://www.fju.edu.tw/">000</li>
+    <li class="text"><a href="https://www.fju.edu.tw/">輔仁大學</li>
   </html>
